Broadcasting with numpy

--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e1e43fcc",
+   "id": "24395274",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d0f1039d",
+   "id": "e4b8f091",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "600d14ef",
+   "id": "7a01366a",
    "metadata": {},
    "source": [
     "# Accessing Index Positions"
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "00ab79a7",
+   "id": "700e4c9c",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5178d50a",
+   "id": "f97e40fe",
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "046315f4",
+   "id": "5f84f357",
    "metadata": {},
    "source": [
     "# Types"
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "96f20894",
+   "id": "40df5020",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b0ef3964",
+   "id": "f60aa32a",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "25e4ccfd",
+   "id": "2f2c8581",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "cea4fab7",
+   "id": "fe7c22ce",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "309fdbd5",
+   "id": "28e52e0d",
    "metadata": {},
    "source": [
     "# Dimensions"
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "669a489d",
+   "id": "46cfdffb",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "0fd6cc8f",
+   "id": "2e4970bd",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "c1fa18bd",
+   "id": "8acaf78a",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "0fbc46e2",
+   "id": "ea7e3b0e",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "9d0a8f2e",
+   "id": "21459009",
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "7628a74a",
+   "id": "725dab13",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "cfb75441",
+   "id": "69b81dbe",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "e3656a14",
+   "id": "8f6ece11",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "935979ca",
+   "id": "80c55c17",
    "metadata": {},
    "source": [
     "# The Matrix"
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "f7ce8d12",
+   "id": "d9386f4d",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "214b10de",
+   "id": "b76ab485",
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "6c42c1c8",
+   "id": "6888dc5e",
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "0d7197b4",
+   "id": "2a6288ba",
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "4327d39e",
+   "id": "df351513",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "b72308b1",
+   "id": "d0e41a27",
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "995319ea",
+   "id": "aa4dca05",
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "236d2dde",
+   "id": "9e9ff22d",
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "9a1aebec",
+   "id": "95961afc",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "54e0568e",
+   "id": "f8af24b9",
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "d916e85c",
+   "id": "7c0a7af9",
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "9adbee59",
+   "id": "4aae71c3",
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "56cf691b",
+   "id": "acf49007",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "93f8dd34",
+   "id": "5e91b66d",
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce463419",
+   "id": "6a7e218c",
    "metadata": {},
    "source": [
     "# Statistics"
@@ -689,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "5f48d6a2",
+   "id": "94118d56",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "83cb9d32",
+   "id": "a9934f7f",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "0be3d059",
+   "id": "29ccfa3f",
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "5ee8b943",
+   "id": "c5eb3aad",
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "3c1d8435",
+   "id": "2d49df40",
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "25156ec1",
+   "id": "b5c8e13c",
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "06e59c11",
+   "id": "fd680f37",
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "a1c6625c",
+   "id": "36ddef20",
    "metadata": {},
    "outputs": [
     {
@@ -863,9 +863,124 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "88a6fc50",
+   "metadata": {},
+   "source": [
+    "# Broadcasting/Vectorized Operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "53f806fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = np.arange(10)\n",
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "76a59eda",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p * 2\n",
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "bc5fcf27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3,  4,  5,  6,  7,  8,  9, 10, 11, 12])"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p += 1\n",
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "d1af1460",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([1,2,3])\n",
+    "b = np.array([4,5,6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "321c5042",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 7, 9])"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = a + b\n",
+    "c"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47c35389",
+   "id": "dc2103ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46737be8",
    "metadata": {},
    "outputs": [],
    "source": []
