--- a/Numpy Basics.ipynb
+++ b/Numpy Basics.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "24395274",
+   "id": "cf782f38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e4b8f091",
+   "id": "e314365a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a01366a",
+   "id": "3b806f8c",
    "metadata": {},
    "source": [
     "# Accessing Index Positions"
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "700e4c9c",
+   "id": "d4057054",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f97e40fe",
+   "id": "4c94daaa",
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f84f357",
+   "id": "e33c45a5",
    "metadata": {},
    "source": [
     "# Types"
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "40df5020",
+   "id": "4712b206",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "f60aa32a",
+   "id": "79102eb7",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "2f2c8581",
+   "id": "94aee489",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "fe7c22ce",
+   "id": "86b3e424",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28e52e0d",
+   "id": "aeb7b232",
    "metadata": {},
    "source": [
     "# Dimensions"
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "46cfdffb",
+   "id": "eee8f5c6",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "2e4970bd",
+   "id": "20a3e8a1",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "8acaf78a",
+   "id": "ad523ed9",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "ea7e3b0e",
+   "id": "17c9699c",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "21459009",
+   "id": "0507322e",
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "725dab13",
+   "id": "60300aa9",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "69b81dbe",
+   "id": "b4176deb",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "8f6ece11",
+   "id": "2d3cb62e",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80c55c17",
+   "id": "3e407608",
    "metadata": {},
    "source": [
     "# The Matrix"
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "d9386f4d",
+   "id": "a8c8fb74",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "b76ab485",
+   "id": "2943eb33",
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "6888dc5e",
+   "id": "147eb03c",
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "2a6288ba",
+   "id": "1eef5b7f",
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "df351513",
+   "id": "4455dc14",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "d0e41a27",
+   "id": "b6f2a2eb",
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "aa4dca05",
+   "id": "a4cf632d",
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "9e9ff22d",
+   "id": "14675590",
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "95961afc",
+   "id": "11db53bb",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "f8af24b9",
+   "id": "7fec8287",
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "7c0a7af9",
+   "id": "4061ce35",
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "4aae71c3",
+   "id": "2800f8e7",
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "acf49007",
+   "id": "72f260c9",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "5e91b66d",
+   "id": "7de0ccc1",
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a7e218c",
+   "id": "86e2f8d9",
    "metadata": {},
    "source": [
     "# Statistics"
@@ -689,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "94118d56",
+   "id": "ec0658cb",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "a9934f7f",
+   "id": "a804bf37",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "29ccfa3f",
+   "id": "f977cf31",
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "c5eb3aad",
+   "id": "599ac6d6",
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "2d49df40",
+   "id": "74e12ca3",
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "b5c8e13c",
+   "id": "f838d10f",
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "fd680f37",
+   "id": "a3baef4b",
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "36ddef20",
+   "id": "7ea5d7bd",
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88a6fc50",
+   "id": "ca4d3af5",
    "metadata": {},
    "source": [
     "# Broadcasting/Vectorized Operations"
@@ -873,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "53f806fd",
+   "id": "4bd33fc1",
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "76a59eda",
+   "id": "b47f3453",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "bc5fcf27",
+   "id": "daacb0ce",
    "metadata": {},
    "outputs": [
     {
@@ -938,8 +938,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "d1af1460",
+   "execution_count": 97,
+   "id": "43dfc865",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,8 +949,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "321c5042",
+   "execution_count": 98,
+   "id": "d7d4c900",
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,7 @@
        "array([5, 7, 9])"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,17 +970,233 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc2103ee",
+   "cell_type": "markdown",
+   "id": "44c3fe7e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Booleans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "f2c654bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3])"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.arange(4)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "6a424ddd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 3])"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[[True, False, False, True]] #select the first and last item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "fb02d7e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False,  True,  True,  True])"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a >= 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "aba075e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[a >= 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "eaff0d9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.5"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "9b6689a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 3])"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[a >= a.mean()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "3cee0a76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1])"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[~ (a >= a.mean())] #not greater or equal to the mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "97cd53bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[32, 34, 96],\n",
+       "       [96, 63, 80],\n",
+       "       [54,  2, 38]])"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = np.random.randint(100, size = (3,3))\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "e7fac12a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False,  True],\n",
+       "       [ True,  True,  True],\n",
+       "       [ True, False, False]])"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b > 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "10d8ae60",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([96, 96, 63, 80, 54])"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b[b > 50] #Give me all values that are greater then "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46737be8",
+   "id": "3a7e03f6",
    "metadata": {},
    "outputs": [],
    "source": []
